--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "scripts": {
     "dev": "node ssr-server.js",
-    "build": "next build",
-    "start": "next start"
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=production node server",
+    "precommit": "lint-staged",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cross-env NODE_ENV=production webpack"
+
+
   },
   "dependencies": {
     "express": "^4.16.4",
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "cookie-parser": "latest",
+    "cors": "2.8.4",
+    "cross-env": "5.2.0",
     "typeface-roboto": "0.0.54",
     "typeface-work-sans": "0.0.54",
     "axios": "latest"
