--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "dev": "node ssr-server.js",
-    "build": "cross-env NODE_ENV=production webpack",
-    "start": "cross-env NODE_ENV=production node server",
+    "build": "next build",
+    "start": "cross-env NODE_ENV=production node ssr-server.js",
     "precommit": "lint-staged",
     "eject": "react-scripts eject",
     "heroku-postbuild": "cross-env NODE_ENV=production webpack"
