--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "heroku-postbuild": "next build"
   },
   "dependencies": {
+    "axios": "latest",
+    "cookie-parser": "latest",
+    "cors": "2.8.4",
+    "cross-env": "5.2.0",
     "express": "^4.16.4",
     "next": "^7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "cookie-parser": "latest",
-    "cors": "2.8.4",
-    "cross-env": "5.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54",
-    "axios": "latest"
+    "typeface-work-sans": "0.0.54"
   },
   "name": "divina",
   "description": "",
@@ -40,7 +40,7 @@
     "url": "git+https://gitlab.com/aaiello/divina.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Andrés Aiello",
   "license": "ISC",
   "bugs": {
     "url": "https://gitlab.com/aaiello/divina/issues"
