--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
+  "name": "divina",
+  "description": "",
+  "version": "1.0.0",
   "scripts": {
     "dev": "node ssr-server.js",
     "build": "next build",
     "start": "node ssr-server.js",
     "precommit": "lint-staged",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "next build"
+    "heroku-postbuild": "next build",
+    "docker:build": "docker login --username=divinadocker --password=4TL97uAztkP6wST; VERSION=$(cat package.json | grep version | head -1 | awk -F= \"{ print $2 }\" | sed 's/[version:,\",]//g'| tr -d '[[:space:]]'); TAG=$(git describe --tags --always); docker build -t aaiello/divina:${VERSION}-${TAG} .",
+    "docker:push": "docker login --username=divinadocker --password=4TL97uAztkP6wST; VERSION=$(cat package.json | grep version | head -1 | awk -F= \"{ print $2 }\" | sed 's/[version:,\",]//g'| tr -d '[[:space:]]'); TAG=$(git describe --tags --always); docker push aaiello/divina:${VERSION}-${TAG}"
   },
   "dependencies": {
     "axios": "latest",
@@ -19,9 +24,6 @@
     "typeface-roboto": "0.0.54",
     "typeface-work-sans": "0.0.54"
   },
-  "name": "divina",
-  "description": "",
-  "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
     "eslint": "5.9.0",
