--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node ssr-server.js",
+    "dev": "npx nodemon ssr-server.js",
     "build": "next build",
     "start": "node ssr-server.js",
     "precommit": "lint-staged",
@@ -19,23 +19,30 @@
     "cross-env": "5.2.0",
     "express": "^4.16.4",
     "next": "^7.0.2",
+    "next-routes": "^1.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3",
     "typeface-roboto": "0.0.54",
     "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-root-import": "^6.1.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint": "5.9.0",
-    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "3.3.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-loader": "2.1.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
-    "eslint-watch": "4.0.2"
+    "eslint-watch": "4.0.2",
+    "nodemon": "^1.18.9"
   },
   "repository": {
     "type": "git",
