--- a/package.json
+++ b/package.json
@@ -13,23 +13,29 @@
     "docker:push": "docker login --username=divinadocker --password=4TL97uAztkP6wST; VERSION=$(cat package.json | grep version | head -1 | awk -F= \"{ print $2 }\" | sed 's/[version:,\",]//g'| tr -d '[[:space:]]'); TAG=$(git describe --tags --always); docker push aaiello/divina:${VERSION}-${TAG}"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
     "axios": "latest",
     "cookie-parser": "latest",
     "cors": "2.8.4",
     "cross-env": "5.2.0",
     "express": "^4.16.4",
+    "jss": "^9.8.7",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-jss": "^8.6.1",
     "styled-components": "^4.1.3",
+    "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
     "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-plugin-root-import": "^6.1.0",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "5.9.0",
     "eslint-config-airbnb": "^17.1.0",
