--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-image": "^2.0.0",
     "react-jss": "^8.6.1",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
