--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-image": "^2.0.0",
+    "react-infinite-scroll-component": "^4.3.0",
     "react-jss": "^8.6.1",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
