--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54"
+    "typeface-work-sans": "0.0.54",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.0.0",
+    "connect-flash": "^0.1.1"
   },
   "main": "index.js",
   "devDependencies": {
