In progress: feed infinite scroll, added editProfile page, fixed some visual stuff and add jsconfig

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "next/babel"
   ],
   "plugins": [
-    ["babel-plugin-root-import"],
+    ["babel-plugin-root-import", { "rootPathPrefix": "~", "rootPathSuffix": "./" }],
     ["styled-components", { "ssr": true } ],
   ],
   "env": {
