--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   "main": "index.js",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-plugin-root-import": "^5.1.0",
+    "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "eslint-loader": "2.1.1",
-    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
