--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54"
+    "typeface-work-sans": "0.0.54",
+    "mongoose": "latest"
   },
   "main": "index.js",
   "devDependencies": {
