--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express-session": "^1.15.6",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
     "isomorphic-unfetch": "^3.0.0",
+    "javascript-time-ago": "^2.0.1",
     "jss": "^9.8.7",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
