--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "no-nested-ternary": 0,
     "space-before-function-paren": ["error", "always"],
     "jsx-a11y/anchor-is-valid": false,
-    "jsx-a11y/click-events-have-key-events": false
+    "jsx-a11y/click-events-have-key-events": false,
+    "no-underscore-dangle": 0
   },
   "settings": {
     "import/resolver": {
