--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "javascript-time-ago": "^2.0.1",
     "jss": "^9.8.7",
+    "mongoose": "latest",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "passport": "^0.4.0",
@@ -43,8 +44,7 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54",
-    "mongoose": "latest"
+    "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
