--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "2.8.4",
     "cross-env": "5.2.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^1.0.0",
     "express-session": "^1.15.6",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
@@ -30,6 +32,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "javascript-time-ago": "^2.0.1",
     "jss": "^9.8.7",
+    "jwks-rsa": "^1.3.0",
     "mongoose": "latest",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
