--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
   "plugins": [
     ["babel-plugin-root-import", { "rootPathPrefix": "~", "rootPathSuffix": "./" }],
     ["styled-components", { "ssr": true } ],
+    ["import", { "libraryName": "@material-ui/core", "libraryDirectory": "", "camel2DashComponentName": false }, "import/core"],
+    ["import", { "libraryName": "@material-ui/icons", "libraryDirectory": "", "camel2DashComponentName": false }, "import/icons"]
   ],
   "env": {
     "test": {
