--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^2.3.2",
     "axios": "latest",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "latest",
     "cors": "2.8.4",
     "cross-env": "5.2.0",
@@ -50,6 +51,7 @@
   "main": "index.js",
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "5.9.0",
