--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-watch": "4.0.2",
     "nodemon": "^1.18.9",
-    "prettier": "^1.16.1"
+    "prettier": "^1.16.1",
+    "react-dropzone": "8.0.3"
   },
   "repository": {
     "type": "git",
