--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54"
+    "typeface-work-sans": "0.0.54",
+    "react-dropzone": "8.0.3"
   },
   "main": "index.js",
   "devDependencies": {
@@ -66,8 +67,7 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-watch": "4.0.2",
     "nodemon": "^1.18.9",
-    "prettier": "^1.16.1",
-    "react-dropzone": "8.0.3"
+    "prettier": "^1.16.1"
   },
   "repository": {
     "type": "git",
