--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
     "typeface-work-sans": "0.0.54",
-    "react-dropzone": "8.0.3"
+    "react-dropzone": "8.0.3",
+    "react-icons": "3.4.0"
   },
   "main": "index.js",
   "devDependencies": {
