--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "axios": "latest",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
+    "cookie": "^0.3.1",
     "cookie-parser": "latest",
-    "cors": "2.8.4",
+    "cors": "^2.8.4",
     "cross-env": "5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -41,14 +42,14 @@
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
+    "react-dropzone": "8.0.3",
+    "react-icons": "3.4.0",
     "react-image": "^2.0.0",
     "react-jss": "^8.6.1",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54",
-    "react-dropzone": "8.0.3",
-    "react-icons": "3.4.0"
+    "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
