--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-boost": "^0.1.27",
     "apollo-server-express": "^2.3.2",
     "axios": "latest",
+    "classnames": "^2.2.6",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie": "^0.3.1",
