--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54"
+    "typeface-work-sans": "0.0.54",
+    "react-share": "2.4.0"
   },
   "main": "index.js",
   "devDependencies": {
