--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "next build",
     "docker:build": "docker login --username=divinadocker --password=4TL97uAztkP6wST; VERSION=$(cat package.json | grep version | head -1 | awk -F= \"{ print $2 }\" | sed 's/[version:,\",]//g'| tr -d '[[:space:]]'); TAG=$(git describe --tags --always); docker build -t aaiello/divina:${VERSION}-${TAG} .; docker build -t aaiello/divina:latest .",
-    "docker:push": "docker login --username=divinadocker --password=4TL97uAztkP6wST; VERSION=$(cat package.json | grep version | head -1 | awk -F= \"{ print $2 }\" | sed 's/[version:,\",]//g'| tr -d '[[:space:]]'); TAG=$(git describe --tags --always); docker push aaiello/divina:${VERSION}-${TAG}; docker push aaiello/divina:latest"
+    "docker:push": "docker login --username=divinadocker --password=4TL97uAztkP6wST; VERSION=$(cat package.json | grep version | head -1 | awk -F= \"{ print $2 }\" | sed 's/[version:,\",]//g'| tr -d '[[:space:]]'); TAG=$(git describe --tags --always); docker push aaiello/divina:${VERSION}-${TAG}; docker push aaiello/divina:latest",
+    "stylelint": "stylelint './**/*.jsx'"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.0",
@@ -69,7 +70,11 @@
     "eslint-plugin-react": "7.11.1",
     "eslint-watch": "4.0.2",
     "nodemon": "^1.18.9",
-    "prettier": "^1.16.1"
+    "prettier": "^1.16.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.5.2"
   },
   "repository": {
     "type": "git",
