--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
     "typeface-work-sans": "0.0.54",
-    "react-share": "2.4.0"
+    "react-share": "2.4.0",
+    "react-iframe": "1.4.0",
+    "puppeteer-google-scraper": "1.0.0"
   },
   "main": "index.js",
   "devDependencies": {
