--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "apollo-boost": "^0.1.27",
+    "apollo-client-preset": "^1.0.6",
+    "apollo-link": "^1.2.8",
+    "apollo-link-ws": "^1.0.4",
     "apollo-server-express": "^2.3.2",
+    "apollo-utilities": "^1.1.3",
     "axios": "latest",
     "classnames": "^2.2.6",
     "connect-flash": "^0.1.1",
@@ -41,20 +45,20 @@
     "passport": "^0.4.0",
     "passport-auth0": "^1.0.0",
     "prop-types": "^15.6.2",
+    "puppeteer-google-scraper": "1.0.0",
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "8.0.3",
     "react-icons": "3.4.0",
+    "react-iframe": "1.4.0",
     "react-image": "^2.0.0",
     "react-jss": "^8.6.1",
+    "react-share": "2.4.0",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54",
-    "react-share": "2.4.0",
-    "react-iframe": "1.4.0",
-    "puppeteer-google-scraper": "1.0.0"
+    "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
