--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,6 +12,7 @@
     "no-duplicate-selectors": true,
     "color-hex-case": "upper",
     "color-hex-length": "short",
+    "value-no-vendor-prefix": null,
     "color-named": "always-where-possible",
     "selector-combinator-space-after": "always",
     "selector-attribute-operator-space-before": "never",
