--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-boost": "^0.1.27",
     "apollo-server-express": "^2.3.2",
     "axios": "latest",
+    "blueimp-load-image": "^2.20.1",
     "classnames": "^2.2.6",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
@@ -36,23 +37,25 @@
     "javascript-time-ago": "^2.0.1",
     "jss": "^9.8.7",
     "mongoose": "latest",
-    "next": "^7.0.2",
+    "next": "^8.0.1",
     "next-routes": "^1.4.2",
     "passport": "^0.4.0",
     "passport-auth0": "^1.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
+    "react": "^16.8.2",
     "react-apollo": "^2.4.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.2",
     "react-dropzone": "8.0.3",
     "react-icons": "3.4.0",
     "react-image": "^2.0.0",
+    "react-image-crop": "^6.0.13",
     "react-jss": "^8.6.1",
+    "react-number-format": "^4.0.6",
+    "react-share": "2.4.0",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54",
-    "react-share": "2.4.0"
+    "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
@@ -71,7 +74,7 @@
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "eslint-watch": "4.0.2",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.18.10",
     "prettier": "^1.16.1",
     "stylelint": "^9.10.1",
     "stylelint-config-recommended": "^2.1.0",
