--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-image": "^2.0.0",
     "react-image-crop": "^6.0.13",
     "react-jss": "^8.6.1",
+    "react-page-visibility": "^3.2.1",
     "react-share": "2.4.0",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
