--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "javascript-time-ago": "^2.0.1",
     "jss": "^9.8.7",
+    "lodash": "^4.17.11",
     "mongoose": "latest",
     "next": "^8.0.1",
     "next-routes": "^1.4.2",
