head master to heroku

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ build_job_2:
   script:
     - echo "This is the second build job."
     - git remote add heroku https://heroku:45e19a87-c9e8-43fd-96d5-f03b41bedd43@git.heroku.com/divinaapp.git
-    - git push -f heroku master
+    - git push -f heroku HEAD:master
