--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54"
+    "typeface-work-sans": "0.0.54",
+    "date-fns": "1.30.1"
   },
   "main": "index.js",
   "devDependencies": {
