--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "apollo-server-express": "^2.3.2",
     "apollo-utilities": "^1.1.3",
     "axios": "latest",
-    "blueimp-load-image": "^2.20.1",
+    "blueimp-load-image": "^2.21.0",
     "classnames": "^2.2.6",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
@@ -32,12 +32,14 @@
     "cookie-parser": "latest",
     "cors": "^2.8.4",
     "cross-env": "5.2.0",
+    "date-fns": "1.30.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "fontfaceobserver": "^2.1.0",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
+    "ip": "^1.1.5",
     "isomorphic-unfetch": "^3.0.0",
     "javascript-time-ago": "^2.0.1",
     "jss": "^9.8.7",
@@ -51,6 +53,7 @@
     "puppeteer-google-scraper": "1.0.0",
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
+    "react-color": "^2.17.0",
     "react-dom": "^16.8.2",
     "react-dropzone": "8.0.3",
     "react-ga": "^2.5.7",
@@ -65,8 +68,7 @@
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
-    "typeface-work-sans": "0.0.54",
-    "date-fns": "1.30.1"
+    "typeface-work-sans": "0.0.54"
   },
   "main": "index.js",
   "devDependencies": {
