--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "apollo-server-express": "^2.3.2",
     "apollo-utilities": "^1.1.3",
     "axios": "latest",
-    "blueimp-load-image": "^2.21.0",
     "classnames": "^2.2.6",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
@@ -39,6 +38,7 @@
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
+    "image-file-to-base64-exif": "^1.0.3",
     "ip": "^1.1.5",
     "isomorphic-unfetch": "^3.0.0",
     "javascript-time-ago": "^2.0.1",
