--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
     "react-color": "^2.17.0",
+    "react-div-100vh": "^0.3.4",
     "react-dom": "^16.8.2",
     "react-dropzone": "8.0.3",
     "react-ga": "^2.5.7",
