--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "react-number-format": "^4.0.6",
     "react-page-visibility": "^3.2.1",
     "react-share": "2.4.0",
+    "react-slick": "^0.24.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
     "styled-jsx": "^3.2.0",
     "typeface-roboto": "0.0.54",
@@ -75,6 +77,7 @@
   },
   "main": "index.js",
   "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-root-import": "^5.1.0",
@@ -92,7 +95,8 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-watch": "4.0.2",
     "nodemon": "^1.18.10",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "url-loader": "^1.1.2"
   },
   "repository": {
     "type": "git",
