--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "npx nodemon server/ssr-server.js",
     "build": "next build",
+    "build:analyze": "BUNDLE_ANALYZE=browser next build",
     "start": "NODE_ENV=production node server/ssr-server.js",
     "eslint": "npx eslint --ext .jsx,.js ./",
     "eslint:fix": "npx eslint --ext .jsx,.js --fix ./",
@@ -18,6 +19,8 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "apollo-boost": "^0.1.27",
     "apollo-client-preset": "^1.0.6",
     "apollo-link": "^1.2.8",
@@ -76,7 +79,6 @@
   },
   "main": "index.js",
   "devDependencies": {
-    "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-root-import": "^5.1.0",
